# jukebox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/app/: Application.hpp  MediaPlayer.hpp
app/include/juke/: CMakeLists.txt
app/include/juke/core/: Application.hpp  CMakeLists.txt  MediaFile.hpp  MediaPlayer.hpp
app/include/juke/graphics/: CMakeLists.txt  Colors.hpp
app/src/: Application.cpp  CMakeLists.txt  MediaPlayer.cpp  main.cpp
app/src/core/: Application.cpp  CMakeLists.txt  MediaFile.cpp  MediaPlayer.cpp
cmake/func/: AddTargetSource.cmake
examples/: bossanova.xm  glitchified.xm  honkytonk.xm
